--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "antd": "4.19.5",
     "axios": "^0.26.1",
     "browserslist": "^4.6.3",
+    "fabric": "^5.2.1",
+    "html2canvas": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
