--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "@testing-library/user-event": "13.5.0",
     "antd": "4.19.5",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "browserslist": "^4.6.3",
     "fabric": "^5.2.1",
+    "firebase": "^9.8.1",
+    "firebase-react-hooks": "^0.8.0",
     "html2canvas": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.0.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-scripts": "5.0.1",
     "web-vitals": "2.1.4"
   },
