--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "browserslist": "^4.6.3",
+    "chart.js": "^3.8.0",
     "fabric": "^5.2.1",
     "firebase": "^9.8.1",
     "firebase-react-hooks": "^0.8.0",
@@ -18,6 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "18.0.0",
     "react-firebase-hooks": "^5.0.3",
     "react-scripts": "5.0.1",
