--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.8.1",
     "firebase-react-hooks": "^0.8.0",
     "html2canvas": "^1.4.1",
+    "js-file-download": "^0.4.12",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-bootstrap": "^2.4.0",
