--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-chartjs-2": "^4.1.0",
     "react-dom": "18.0.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "2.1.4"
   },
